# Trainings-Backoffice

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  BRANCH_PROTECTION.md  DEPLOYMENT.md  PROJEKTSTAND.md  README.md  setup_production_email.sh
.github/: SECRETS.md
.github/workflows/: deploy.yml  rollback.yml  test.yml
backend/: .env.example  .gitignore  alembic.ini  create_user.py  gunicorn_config.py  pyproject.toml  pytest.ini  requirements.txt  wsgi.py
backend/alembic/: README  env.py
backend/alembic/versions/: 001_add_mailbox_tables.py
backend/app/: config.py  database.py  flask_app.py  main.py  seed_data.py
backend/app/core/: __init__.py  deps.py  monitoring.py  security.py
backend/app/models/: __init__.py  core.py  user.py
backend/app/routers/: __init__.py  auth.py  brands.py  catalog.py  customers.py  emails.py  search.py  tasks.py  trainers.py  trainings.py
backend/app/schemas/: auth.py  base.py
backend/app/services/: ai.py  alwaysdata.py  checklist.py  email.py  mailbox.py
backend/app/templates/: index.html  login.html
backend/app/utils/: search.py
backend/deploy/: nginx_snippet.conf  supervisor.conf
backend/migrations/: 001_create_users_table.sql  002_add_trainer_fields.sql  003_split_address_fields.sql  003_split_address_fields_sqlite.sql
backend/scripts/: cleanup_database.py  cleanup_database.sql  create_admin_user.py  deploy.sh  migrate.sh  migrate_mailbox.sql  setup_noreply_mailbox.py  setup_production.sh
backend/tests/: conftest.py  test_api.py  test_auth.py  test_config.py
