[tool.poetry]
name = "trainings-backoffice"
version = "0.1.0"
description = "Modulare Backoffice-Plattform für Trainingsakademien"
authors = ["Backoffice Team <team@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {version = "^0.27.0", extras = ["standard"]}
sqlalchemy = "^2.0.25"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
python-dateutil = "^2.8.2"
# Authentication dependencies
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-multipart = "^0.0.6"
# Database drivers
psycopg2-binary = "^2.9.9"  # PostgreSQL driver

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.1.14"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
